* fix sonar issues * implement cache clear for "clear" button
Closes: #11327




git-svn-id: http://josm.openstreetmap.de/svn/trunk@8600 0c6e7542-c601-0410-84e7-c038aed88b3b